cluster/app-cloudflared.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cloudflared
  labels:
    app: cloudflared

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          args: 
            - tunnel
            - --no-autoupdate
            - run
            - --token
            - $(cloudflared-token)
