cluster/app-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
spec:
    ports:
      - name: postgres
        port: 5432
        targetPort: postgres
    selector:
        app: postgres
    type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        # runAsUser: 1978 
        fsGroup: 1978
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 4532
        volumeMounts:
        - name: pvc-nfs
          mountPath: /var/lib/postgresql/data
          subPath: postgres
#      imagePullSecrets:
#        - name: ghcr-io
      volumes:
        - name: pvc-nfs
          persistentVolumeClaim:
           claimName: nfs
