cluster/app-keycloak.yaml
# Based on https://raw.githubusercontent.com/keycloak/keycloak-quickstarts/refs/heads/main/kubernetes/keycloak.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
  - secretName: keycloak-certs
    hosts:
    - keycloak.kotimme.cc
  rules:
  - host: keycloak.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
spec:
  tls:
  - secretName: keycloak-admin-certs
    hosts:
    - keycloak-admin.kotimme.cc
  rules:
  - host: keycloak-admin.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: keycloak
  type: NodePort


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  serviceName: "keycloak"
  template:
    metadata:
      labels:
        app: keycloak
    spec:
#      securityContext:
#        fsGroup: 1978
#      imagePullSecrets:
#        - name: docker-hub
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.1.4
        imagePullPolicy: IfNotPresent
        args:
        - "start"
#        - "start-dev"
#        - "--hostname"
#        - "https://keycloak.kotimme.cc"
#        - "--hostname-backchannel-dynamic"
#        - "true"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
#        readinessProbe:
#          httpGet:
#            path: /health/ready
#            port: 9000
#            scheme: HTTPS
        volumeMounts:
        - name: certificate
          mountPath: /opt/keycloak/conf/certificate
          readOnly: true
        - name: certificate-selfsigned
          mountPath: /opt/keycloak/conf/certificate-selfsigned
          readOnly: true
      - name: postgres
        image: postgres:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - name: dir
          mountPath: /var/lib/postgresql/data
          subPath: postgres/keycloak
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
        - name: certificate
          secret:
            secretName: keycloak-certs
        - name: certificate-selfsigned
          secret:
            secretName: keycloak-selfsigned-certs
