cluster/app-redis.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis
spec:
  tls:
  - secretName: redis-certs
    hosts:
    - redis.kotimme.cc
  rules:
  - host: redis.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisinsight
            port:
              name: redisinsight
---
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    ports:
      - name: redis
        port: 6379
        targetPort: redis
    selector:
        app: redis
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: redisinsight
spec:
    ports:
      - name: redisinsight
        port: 80
        targetPort: redisinsight
    selector:
        app: redisinsight
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  serviceName: "redis"
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: redis
          containerPort: 6379
      - name: redisinsight
        image: redisinsight:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: redisinsight
          containerPort: 5540
#        volumeMounts:
#        - name: config
#          mountPath: /usr/local/etc/redis/redis.conf
#      imagePullSecrets:
#        - name: ghcr-io
#      volumes:
#        - name: redis
#          configMap:
#            name: app-redis-redis-conf
